--- a/content/preliminaries/deepspeed.tex
+++ b/content/preliminaries/deepspeed.tex
@@ -56,7 +56,7 @@ following ways:
 
 \textit{ZeRO-Offload} \cite{DBLP:journals/corr/abs-2101-06840} and 
 \textit{ZeRO-Infinity} \cite{DBLP:journals/corr/abs-2104-07857} are features of ZeRO
-that were added at a later point to enable offloading of model states to CPU memory 
+that were added at a later point in time to enable offloading of model states to CPU memory 
 for very large models in order to further increase GPU memory savings. While ZeRO-Offload 
 enables offloading of optimizer states in stage 2 of ZeRO-DP, ZeRO-Infinity
 enables both offloading of model parameters and optimizer states in stage 3.
