--- a/content/preliminaries/ocp.tex
+++ b/content/preliminaries/ocp.tex
@@ -11,7 +11,7 @@ catalyst discovery: Being able to efficiently and accurately predict the
 forces and energy of inorganic and organic interfaces for use in catalysis avoids the 
 computational bottlenecks of traditional simulation tools (see \ref{subsubsec:atomic-simulations-general}). 
 
-The Open Catalyst Project \cite*{Chanussot_2021} is a joint effort by Facebook AI and Carnegie Mellon 
+The Open Catalyst Project\footnote{\url{https://github.com/Open-Catalyst-Project/ocp}} \cite*{Chanussot_2021} is a joint effort by Facebook AI and Carnegie Mellon 
 University's Department of Chemical Engineering which was launched in 2020 and 
 aims to provide a unified dataset and baseline models for predicting forces and energy in molecular 
 simulations of catalysts. The project provides the Open Catalyst 2020 (OC20) dataset, which contains 
