--- a/final-report.tex
+++ b/final-report.tex
@@ -76,6 +76,7 @@
     \input{./content/preliminaries/scalable_ml.tex}
     \input{./content/preliminaries/deepspeed.tex}
 
+    \input{./content/implementation/general.tex}
     \input{./content/implementation/mixed_precision.tex}
     \input{./content/implementation/zero.tex}
     \input{./content/implementation/cpu_offloading.tex}
