--- a/content/project_organization.tex
+++ b/content/project_organization.tex
@@ -22,4 +22,10 @@ Our project was structured in 4 phases:
 
 Our team met twice each week on Monday and Friday to discuss progress and define next steps. Most of 
 the time, individual team members met two to three additional times during the week to discuss specific 
-tasks in their area of activity. 
+tasks in their area of activity. For organizational porposes, team and personal conversations we used 
+a private Slack Channel.
+
+For version management of our code we created a Github organization\footnote{\url{https://github.com/TUM-DI-Lab-Graph-Scaling}} 
+where we placed multiple projects like our own fork of the OCP project, evaluation scripts and also 
+the source files for the final report. We tracked problems and errors we encountered as issues in the 
+corresponding projects and worked with a branch structure to avoid disrupting the work of our teammates.
