--- a/final-report.tex
+++ b/final-report.tex
@@ -82,6 +82,7 @@
     \input{./content/implementation/cpu_offloading.tex}
 
     \input{./content/evaluation/datasets.tex}
+    \input{./content/evaluation/setup.tex}
 
     \input{./content/related_work.tex}
 
