--- a/preamble.tex
+++ b/preamble.tex
@@ -255,4 +255,61 @@ literate=*%
 }
 
 \newcommand*{\pyth}{\lstinline[style=mypythoninline]}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% JSON syntax highlighting
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\colorlet{punct}{red!60!black}
+\definecolor{delim}{RGB}{20,105,176}
+\colorlet{numb}{magenta!60!black}
+\definecolor{jsonStringColor}{RGB}{6,125,23}
+
+\lstdefinestyle{myjson}{
+    basicstyle=\ttfamily\footnotesize,%\setstretch{.5},
+    showstringspaces=false,
+    breaklines=true,
+    stringstyle=\color{jsonStringColor},
+    string=[s]{"}{"},
+    literate=
+     *{0}{{{\color{numb}0}}}{1}
+      {1}{{{\color{numb}1}}}{1}
+      {2}{{{\color{numb}2}}}{1}
+      {3}{{{\color{numb}3}}}{1}
+      {4}{{{\color{numb}4}}}{1}
+      {5}{{{\color{numb}5}}}{1}
+      {6}{{{\color{numb}6}}}{1}
+      {7}{{{\color{numb}7}}}{1}
+      {8}{{{\color{numb}8}}}{1}
+      {9}{{{\color{numb}9}}}{1}
+      {:}{{{\color{punct}{:}}}}{1}
+      {,}{{{\color{punct}{,}}}}{1}
+      {\{}{{{\color{delim}{\{}}}}{1}
+      {\}}{{{\color{delim}{\}}}}}{1}
+      {[}{{{\color{delim}{[}}}}{1}
+      {]}{{{\color{delim}{]}}}}{1},
+    ,%
+    %aboveskip=.5ex,
+    frame=trbl,
+    %frameround=tttt,
+    %framesep=.3ex,
+    rulecolor=\color{black!40},
+    %framexleftmargin=\framemargin,
+    %framextopmargin=.1ex,
+    %framexbottommargin=.1ex,
+    %framexrightmargin=\framemargin,
+    %framexleftmargin=1mm, framextopmargin=1mm, frame=shadowbox, rulesepcolor=\color{blue},#1
+    %frame=tb,
+    backgroundcolor=\color{white},
+    breakindent=.5\textwidth,frame=single,breaklines=true%
+    %}
+}
+
+\newcommand*{\inputjson}[3]{\lstinputlisting[firstline=#2,lastline=#3,firstnumber=#2,frame=single,breakindent=.5\textwidth,frame=single,breaklines=true,style=myjson]{#1}}
+
+\lstnewenvironment{json}[1][]{\lstset{style=myjson}}{}
+
+
     
