--- a/content/implementation/cpu_offloading.tex
+++ b/content/implementation/cpu_offloading.tex
@@ -12,6 +12,8 @@ The offload engine automatically determines gradients and optimizer states
 which can be computed on the CPU while minimizing communications between CPU 
 and GPU and maximize memory savings on the GPU.
 
+The determination which gradient ZeRO-Offload engine 
+
 ZeRO-Offload for Zero Stage 2 is enabled by specifing the offload optimizer 
 configuration inside of the ZeRO configuration:
 
