--- a/content/evaluation/setup.tex
+++ b/content/evaluation/setup.tex
@@ -5,3 +5,5 @@ scaled up to 300 million parameters equal to Gemnet-XL\cite*{https://doi.org/10.
 The model consists of 6 interactions blocks, an atom embedding size of 128, an edge embedding size of 1536, 
 and triplet embedding size of 384. All other hyperparameters are equal to Gemnet-T as defined in 
 \cite*{https://doi.org/10.48550/arxiv.2106.08903}.
+
+\textbf{DimeNet}
