--- a/preamble.tex
+++ b/preamble.tex
@@ -34,6 +34,7 @@
 \usepackage{wrapfig}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{inconsolata}
 
 \usetikzlibrary{shapes,snakes}
 \usetikzlibrary{patterns}
