Add first version of results visualization

--- a/final-report.tex
+++ b/final-report.tex
@@ -83,6 +83,7 @@
 
     \input{./content/evaluation/datasets.tex}
     \input{./content/evaluation/setup.tex}
+    \input{./content/evaluation/results.tex}
 
     \input{./content/related_work.tex}
 
