--- a/content/appendix.tex
+++ b/content/appendix.tex
@@ -1,2 +1,48 @@
 \section*{Appendix}
 \addcontentsline{toc}{section}{Appendix}
+
+\begin{figure}[H]
+
+    \centering
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/stage0/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/stage0_fp16/averaged.pdf}
+    \end{subfigure}
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/stage1/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/stage1_ocomm/averaged.pdf}
+    \end{subfigure}
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/stage2_ocomm/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/stage2_offloadOptimizer[cpu]_ocomm/averaged.pdf}
+    \end{subfigure}
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/stage3_ocomm/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/stage3__offloadOptimizer[cpu]_offloadParam[cpu]_ocomm/averaged.pdf}
+    \end{subfigure}
+    
+\end{figure}
