--- a/content/evaluation/results.tex
+++ b/content/evaluation/results.tex
@@ -1,57 +1,37 @@
 \subsection{Results}
 
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.98\textwidth]{evaluation/memory_comparison.pdf}
-\end{figure}
+\subsubsection{GemNet}
+
+\begin{itemize}
+    \item s2ef (batch size 2), is2re(batch size 2)
+    \item configurations (8 times): baseline stage 0 (all deepspeed features deactivated), 
+    stage 0 fp16: memory savings from deepspeed, not only from fp16. 
+    \item big drop from stage 0 to stage 1: Optimizer states have huge influence on
+    memory consumption, memory-wise, stage 2 with optimizer offloading best
+    \item optimizer offloading saves memory, but increases runtime
+    \item stage 3 seems ineffective
+    \item communication overlapping (pipeline parallelism) seems ineffective.
+\end{itemize}
+
+For each experiment, we performed one epoch of training
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.98\textwidth]{evaluation/runtimes_comparison.pdf}
-\end{figure}
 
-\begin{figure}[H]
-
-    \centering
-
-    \begin{subfigure}[t]{0.49\textwidth}
+    \begin{subfigure}[t]{0.48\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{evaluation/stage0/averaged.pdf}
+        \includegraphics[width=\textwidth]{evaluation/memory_comparison.pdf}
+        \label{fig:gemnet-memory-results}
     \end{subfigure}%
     ~
-    \begin{subfigure}[t]{0.49\textwidth}
+    \begin{subfigure}[t]{0.48\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{evaluation/stage0_fp16/averaged.pdf}
+        \includegraphics[width=\textwidth]{evaluation/runtimes_comparison.pdf}
+        \label{gemnet-runtimes-results}
     \end{subfigure}
-
-    \begin{subfigure}[t]{0.49\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{evaluation/stage1/averaged.pdf}
-    \end{subfigure}%
-    ~
-    \begin{subfigure}[t]{0.49\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{evaluation/stage1_ocomm/averaged.pdf}
-    \end{subfigure}
-
-    \begin{subfigure}[t]{0.49\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{evaluation/stage2_ocomm/averaged.pdf}
-    \end{subfigure}%
-    ~
-    \begin{subfigure}[t]{0.49\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{evaluation/stage2_offloadOptimizer[cpu]_ocomm/averaged.pdf}
-    \end{subfigure}
-
-    \begin{subfigure}[t]{0.49\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{evaluation/stage3_ocomm/averaged.pdf}
-    \end{subfigure}%
-    ~
-    \begin{subfigure}[t]{0.49\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{evaluation/stage3__offloadOptimizer[cpu]_offloadParam[cpu]_ocomm/averaged.pdf}
-    \end{subfigure}
+    \vspace*{-1.5em}
+    \caption{Memory consumption and runtimes on the S2EF task.}
     
 \end{figure}
+
+\subsubsection{DimeNet++}
