--- a/content/appendix.tex
+++ b/content/appendix.tex
@@ -7,42 +7,92 @@
 
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{evaluation/stage0/averaged.pdf}
+        \includegraphics[width=\textwidth]{evaluation/gemnet/s2ef/cuda_memory/S0/averaged.pdf}
     \end{subfigure}%
     ~
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{evaluation/stage0_fp16/averaged.pdf}
+        \includegraphics[width=\textwidth]{evaluation/gemnet/s2ef/cuda_memory/S0+fp16/averaged.pdf}
     \end{subfigure}
 
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{evaluation/stage1/averaged.pdf}
+        \includegraphics[width=\textwidth]{evaluation/gemnet/s2ef/cuda_memory/S1/averaged.pdf}
     \end{subfigure}%
     ~
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{evaluation/stage1_ocomm/averaged.pdf}
+        \includegraphics[width=\textwidth]{evaluation/gemnet/s2ef/cuda_memory/S1+OC/averaged.pdf}
     \end{subfigure}
 
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{evaluation/stage2_ocomm/averaged.pdf}
+        \includegraphics[width=\textwidth]{evaluation/gemnet/s2ef/cuda_memory/S2+OC/averaged.pdf}
     \end{subfigure}%
     ~
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{evaluation/stage2_offloadOptimizer[cpu]_ocomm/averaged.pdf}
+        \includegraphics[width=\textwidth]{evaluation/gemnet/s2ef/cuda_memory/S2+OO+OC/averaged.pdf}
     \end{subfigure}
 
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{evaluation/stage3_ocomm/averaged.pdf}
+        \includegraphics[width=\textwidth]{evaluation/gemnet/s2ef/cuda_memory/S3+OC/averaged.pdf}
     \end{subfigure}%
     ~
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{evaluation/stage3__offloadOptimizer[cpu]_offloadParam[cpu]_ocomm/averaged.pdf}
+        \includegraphics[width=\textwidth]{evaluation/gemnet/s2ef/cuda_memory/S3+PO+OO+OC/averaged.pdf}
     \end{subfigure}
+
+    \caption{GPU memory consumption for GemNet on the S2EF task.}
+    
+\end{figure}
+
+\begin{figure}[H]
+
+    \centering
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/gemnet/is2re/cuda_memory/S0/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/gemnet/is2re/cuda_memory/S0+fp16/averaged.pdf}
+    \end{subfigure}
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/gemnet/is2re/cuda_memory/S1/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/gemnet/is2re/cuda_memory/S1+OC/averaged.pdf}
+    \end{subfigure}
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/gemnet/is2re/cuda_memory/S2+OC/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/gemnet/is2re/cuda_memory/S2+OO+OC/averaged.pdf}
+    \end{subfigure}
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/gemnet/is2re/cuda_memory/S3+OC/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/gemnet/is2re/cuda_memory/S3+PO+OO+OC/averaged.pdf}
+    \end{subfigure}
+
+    \caption{GPU memory consumption for GemNet on the IS2RE task.}
     
 \end{figure}
