Add evaluation tables for gemnet

--- a/preamble.tex
+++ b/preamble.tex
@@ -35,6 +35,8 @@
 \usepackage{listings}
 \usepackage{xcolor}
 \usepackage{inconsolata}
+\usepackage{csvsimple}
+\usepackage{multirow}
 
 \usetikzlibrary{shapes,snakes}
 \usetikzlibrary{patterns}
