Add evaluation results for DimeNet

--- a/content/appendix.tex
+++ b/content/appendix.tex
@@ -96,3 +96,51 @@
     \caption{GPU memory consumption for GemNet on the IS2RE task.}
     
 \end{figure}
+
+\begin{figure}[H]
+
+    \centering
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/dimenet/is2re/cuda_memory/S0/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/dimenet/is2re/cuda_memory/S0+fp16/averaged.pdf}
+    \end{subfigure}
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/dimenet/is2re/cuda_memory/S1/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/dimenet/is2re/cuda_memory/S1+OC/averaged.pdf}
+    \end{subfigure}
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/dimenet/is2re/cuda_memory/S2+OC/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/dimenet/is2re/cuda_memory/S2+OO+OC/averaged.pdf}
+    \end{subfigure}
+
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/dimenet/is2re/cuda_memory/S3+OC/averaged.pdf}
+    \end{subfigure}%
+    ~
+    \begin{subfigure}[t]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{evaluation/dimenet/is2re/cuda_memory/S3+PO+OO+OC/averaged.pdf}
+    \end{subfigure}
+
+    \caption{GPU memory consumption for DimeNet++ on the IS2RE task.}
+    
+\end{figure}
